--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Swing/Menu/MenuItem.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Swing/Menu/MenuItem.form
@@ -54,11 +54,14 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lbName">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="0" red="99" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="16" style="1"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="66" red="66" type="rgb"/>
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
       </Properties>
     </Component>
